  - Fix /ta reload all reloading config/lang twice, courtesy of Warriorrrr with PR #5389.
  - Only compile pushes for master, courtesy of Warriorrrr with PR #5390.
  - Fix loading order of databaseconfig and config, fixing the config's database section conversion.
  - Fix towny.claimed.townowned.* node not being tested for.
  - New Config Option: economy.daily_taxes.nation_perplot_upkeep
    - Default: false
    - Uses the total number of plots which a nation has across all of its towns to determine upkeep instead of nation_pertown_upkeep and instead of nation level (number of residents.)
    - Calculated by (price_nation_upkeep X number of plots owned by the nation's towns.)
  - Bump language file to 0.129.
  - Make /t reslist {townname} usable by the console.
  - Make the plugin.name_blacklist apply to the town and nation titles and surnames.
0.97.2.10:
  - Cache builds & fix up labeler & update to Java 17, courtesy of Warriorrrr with PR #5394.
  - Cleanup util classes, couresty of EuGNosii with PR #5348.
  - Bump language file to 0.130.
  - Fix PlayerCacheUtil not choosing an Outsider TownBlockStatus.
    - Closes #5395.
0.97.2.11:
  - Fix ConcurrentModificationException in InviteHandler's expired invite search.
  - Fix /towny command not working for console senders in the TownyCommandAddOn API.
  - Add TabCompleter support for addon commands, courtesy of Warriorrrr with PR #5403.
  - Fix /ta set capital, /ta set king, /ta nation NAME set commands not working properly.
  - Make Confirmation commands configurable through the API.
  - Regression: fix empty strings always being blacklisted, courtesy of Warriorrrr with PR #5406.
  - Remove one-way nation alliances.
    - This setting pre-dated the Invite system added many years ago.
    - Nations will no longer be able to ally another nation unless the other nation accepts their invite to ally.
  - Remove Config Node: war.disallow_one_way_alliance